# routes/index.js
@@ -1,7 +1,7 @@
 // Needed Resources 
 const express = require("express")
 const router = new express.Router()
-const swaggerDocument = require('../swagger.json');
+//const swaggerDocument = require('../swagger.json');
 const passport = require("passport");
 
 
@@ -23,9 +23,12 @@ router.use('/organization', require('./organization'));
 
 
 
-router.get('/login', passport.authenticate('github'), (req, res) => {});
+router.get('/login', passport.authenticate('github'), (req, res) => {
+  //#swagger.tags=['Login']
+});
 
 router.get('/logout', function(req, res, next) {
+  //#swagger.tags=['Login']
     req.logout(function(err) {
       if (err) { return next(err); }
       res.redirect('/');
